hamburger menu and its content alignment fixed

--- a/tna-app/src/LoginForms/Forms.css
+++ b/tna-app/src/LoginForms/Forms.css
@@ -84,7 +84,7 @@
   width: 85%;
   background-color: transparent;
   border: none;
-  color: white;
+  color: black;
   outline: none;
   border-bottom: 1px solid #445366;
   font-size: 1em;
@@ -103,17 +103,16 @@
   border: none;
   outline: none;
   border-radius: 25px;
-  padding: 15px 70px;
-  font-size: 0.8em;
-  font-weight: 500;
+  padding: 10px 50px;
+  font-size: 16px;
 }
 
 .FormField__Link {
-  color: #2e2c28;
+  color: #757575;
   text-decoration: none;
   display: inline-block;
-  border-bottom: 1.5px solid #225e62;
-  padding-bottom: 5px;
+  border-bottom: 1px solid #757575;
+  margin-left: 20px;
 }
 
 .FormField__CheckboxLabel {
