--- a/tna-app/src/css/rightcontainer.css
+++ b/tna-app/src/css/rightcontainer.css
@@ -3,3 +3,7 @@
     height: auto;
     float: right;
   }
+
+.main-container{
+  clear: both;
+}
